[Clean Up] for paper submission
1. Remove the part not need for paper submission
2. Add comments for better understanding the code
3. Add Readme for basic structure of the folder

--- a/AIF360-Huangrui Modified/examples/EOP_Recidivism.ipynb
+++ b/AIF360-Huangrui Modified/examples/EOP_Recidivism.ipynb
@@ -323,6 +323,7 @@
     "    #also flip the labels for the train set\n",
     "    dataset_orig_train_pred.labels = (y_train_pred<0.5).reshape(-1,1)\n",
     "    sigmoid = lambda x: 1 / (1 + np.exp(2-4*x))\n",
+    "    #also flip the score for the train set\n",
     "    dataset_orig_train_pred.scores = 1- sigmoid(y_train_pred).reshape(-1,1)\n",
     "\n",
     "\n",
@@ -330,6 +331,7 @@
     "    X_test = dataset_orig_test.features\n",
     "    y_test = dataset_orig_test.labels\n",
     "    y_test_pred = lmod.predict(X_test)\n",
+    "    #also flip the score for the test set\n",
     "    dataset_orig_test_pred.scores = 1 -  sigmoid(y_test_pred).reshape(-1,1)\n",
     "    #also flip the labels for the test set\n",
     "    dataset_orig_test_pred.labels = (y_test_pred<0.5).reshape(-1,1)\n",
@@ -345,7 +347,6 @@
     "    metric_test_aft = compute_metrics(dataset_orig_test, dataset_transf_test_pred, \n",
     "                    unprivileged_groups, privileged_groups)\n",
     "\n",
-    "    #自己计算error, 不是balanced accuracy！！！\n",
     "    print(\"K = {}, budget = {}\".format(K, budget))\n",
     "    print(\"The Error for the test dataset is {:.4}\".format(np.mean(dataset_orig_test.labels!=dataset_transf_test_pred.labels)))\n",
     "    print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))\n",
