--- a/AIF360-Huangrui Modified/examples/ROC_ Bank.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_ Bank.ipynb
@@ -20,9 +20,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:\n",
+      "`load_boston` has been removed from scikit-learn since version 1.2.\n",
+      "\n",
+      "The Boston housing prices dataset has an ethical problem: as\n",
+      "investigated in [1], the authors of this dataset engineered a\n",
+      "non-invertible variable \"B\" assuming that racial self-segregation had a\n",
+      "positive impact on house prices [2]. Furthermore the goal of the\n",
+      "research that led to the creation of this dataset was to study the\n",
+      "impact of air quality but it did not give adequate demonstration of the\n",
+      "validity of this assumption.\n",
+      "\n",
+      "The scikit-learn maintainers therefore strongly discourage the use of\n",
+      "this dataset unless the purpose of the code is to study and educate\n",
+      "about ethical issues in data science and machine learning.\n",
+      "\n",
+      "In this special case, you can fetch the dataset from the original\n",
+      "source::\n",
+      "\n",
+      "    import pandas as pd\n",
+      "    import numpy as np\n",
+      "\n",
+      "    data_url = \"http://lib.stat.cmu.edu/datasets/boston\"\n",
+      "    raw_df = pd.read_csv(data_url, sep=\"\\s+\", skiprows=22, header=None)\n",
+      "    data = np.hstack([raw_df.values[::2, :], raw_df.values[1::2, :2]])\n",
+      "    target = raw_df.values[1::2, 2]\n",
+      "\n",
+      "Alternative datasets include the California housing dataset and the\n",
+      "Ames housing dataset. You can load the datasets as follows::\n",
+      "\n",
+      "    from sklearn.datasets import fetch_california_housing\n",
+      "    housing = fetch_california_housing()\n",
+      "\n",
+      "for the California housing dataset and::\n",
+      "\n",
+      "    from sklearn.datasets import fetch_openml\n",
+      "    housing = fetch_openml(name=\"house_prices\", as_frame=True)\n",
+      "\n",
+      "for the Ames housing dataset.\n",
+      "\n",
+      "[1] M Carlisle.\n",
+      "\"Racist data destruction?\"\n",
+      "<https://medium.com/@docintangible/racist-data-destruction-113e3eff54a8>\n",
+      "\n",
+      "[2] Harrison Jr, David, and Daniel L. Rubinfeld.\n",
+      "\"Hedonic housing prices and the demand for clean air.\"\n",
+      "Journal of environmental economics and management 5.1 (1978): 81-102.\n",
+      "<https://www.researchgate.net/publication/4974606_Hedonic_housing_prices_and_the_demand_for_clean_air>\n",
+      ": LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:tensorflow:From C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "# Load all necessary packages\n",
@@ -60,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,6 +146,7 @@
     "        \n",
     "\n",
     "        df = pd.read_csv(path)\n",
+    "        #flip the sign of cons.conf.idx so that max(df[col])>1 is satisfied\n",
     "        df[\"cons.conf.idx\"] = -df[\"cons.conf.idx\"]\n",
     "        numericals = [col for col in df.columns if len(df[col].unique())>2 and max(df[col])>1]\n",
     "        code_continuous(df,numericals, 5)\n",
@@ -113,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,75 +198,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balanced accuracy = 0.8191\n",
-      "Statistical parity difference = 0.3088\n",
-      "Disparate impact = 1.9426\n",
-      "Average odds difference = 0.1899\n",
-      "Equal opportunity difference = 0.0909\n",
-      "Theil index = 0.0626\n",
-      "Balanced accuracy = 0.8242\n",
-      "Statistical parity difference = 0.4216\n",
-      "Disparate impact = 2.0632\n",
-      "Average odds difference = 0.2222\n",
-      "Equal opportunity difference = 0.0000\n",
-      "Theil index = 0.0583\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.2751\n",
+      "Disparate impact = 1.8126\n",
+      "Average odds difference = 0.1457\n",
+      "Equal opportunity difference = 0.0318\n",
+      "Theil index = 0.0612\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.2751\n",
+      "Disparate impact = 1.8126\n",
+      "Average odds difference = 0.1457\n",
+      "Equal opportunity difference = 0.0318\n",
+      "Theil index = 0.0612\n",
       "Balanced accuracy = 0.7788\n",
       "Statistical parity difference = 0.2218\n",
       "Disparate impact = 1.5046\n",
       "Average odds difference = 0.1068\n",
       "Equal opportunity difference = 0.0287\n",
       "Theil index = 0.0675\n",
-      "Balanced accuracy = 0.7582\n",
-      "Statistical parity difference = 0.4338\n",
-      "Disparate impact = 1.8466\n",
-      "Average odds difference = 0.2530\n",
-      "Equal opportunity difference = 0.0259\n",
-      "Theil index = 0.0627\n",
-      "K = 1, budget = 0.01\n",
-      "The Error for the test dataset is 0.4035\n",
-      "The Equal opportunity difference for the test dataset is 0.02589\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\aif360\\metrics\\classification_metric.py:278: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  TPR=TP / P, TNR=TN / N, FPR=FP / N, FNR=FN / P,\n",
-      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\aif360\\metrics\\classification_metric.py:279: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  GTPR=GTP / P, GTNR=GTN / N, GFPR=GFP / N, GFNR=GFN / P,\n",
-      "C:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\aif360\\algorithms\\postprocessing\\reject_option_classification.py:160: UserWarning: Unable to satisy fairness constraints\n",
-      "  warn(\"Unable to satisy fairness constraints\")\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 0 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [28], line 60\u001b[0m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;66;03m# print(\"Best balanced accuracy (no fairness constraints) = %.4f\" % np.max(ba_arr))\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \u001b[38;5;66;03m# print(\"Optimal classification threshold (no fairness constraints) = %.4f\" % best_class_thresh)\u001b[39;00m\n\u001b[0;32m     53\u001b[0m \u001b[38;5;66;03m#### Estimate optimal parameters for the ROC method\u001b[39;00m\n\u001b[0;32m     54\u001b[0m ROC \u001b[38;5;241m=\u001b[39m RejectOptionClassification(unprivileged_groups\u001b[38;5;241m=\u001b[39munprivileged_groups, \n\u001b[0;32m     55\u001b[0m                                 privileged_groups\u001b[38;5;241m=\u001b[39mprivileged_groups, \n\u001b[0;32m     56\u001b[0m                                 low_class_thresh\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.01\u001b[39m, high_class_thresh\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.99\u001b[39m,\n\u001b[0;32m     57\u001b[0m                                 num_class_thresh\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m100\u001b[39m, num_ROC_margin\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m50\u001b[39m,\n\u001b[0;32m     58\u001b[0m                                 metric_name\u001b[38;5;241m=\u001b[39mmetric_name,\n\u001b[0;32m     59\u001b[0m                                 metric_ub\u001b[38;5;241m=\u001b[39mmetric_ub, metric_lb\u001b[38;5;241m=\u001b[39mmetric_lb)\n\u001b[1;32m---> 60\u001b[0m ROC \u001b[38;5;241m=\u001b[39m \u001b[43mROC\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdataset_orig_train\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdataset_orig_train_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     61\u001b[0m \u001b[38;5;66;03m# print(\"Optimal classification threshold (with fairness constraints) = %.4f\" % ROC.classification_threshold)\u001b[39;00m\n\u001b[0;32m     62\u001b[0m \u001b[38;5;66;03m# print(\"Optimal ROC margin = %.4f\" % ROC.ROC_margin)\u001b[39;00m\n\u001b[0;32m     63\u001b[0m \n\u001b[0;32m     64\u001b[0m \u001b[38;5;66;03m# Metrics for the train set\u001b[39;00m\n\u001b[0;32m     65\u001b[0m fav_inds \u001b[38;5;241m=\u001b[39m dataset_orig_train_pred\u001b[38;5;241m.\u001b[39mscores \u001b[38;5;241m>\u001b[39m best_class_thresh\n",
-      "File \u001b[1;32mC:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\aif360\\algorithms\\transformer.py:27\u001b[0m, in \u001b[0;36maddmetadata.<locals>.wrapper\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;129m@wraps\u001b[39m(func)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs):\n\u001b[1;32m---> 27\u001b[0m     new_dataset \u001b[38;5;241m=\u001b[39m func(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m     28\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(new_dataset, Dataset):\n\u001b[0;32m     29\u001b[0m         new_dataset\u001b[38;5;241m.\u001b[39mmetadata \u001b[38;5;241m=\u001b[39m new_dataset\u001b[38;5;241m.\u001b[39mmetadata\u001b[38;5;241m.\u001b[39mcopy()\n",
-      "File \u001b[1;32mC:\\edb\\languagepack\\v2\\Python-3.9\\lib\\site-packages\\aif360\\algorithms\\postprocessing\\reject_option_classification.py:162\u001b[0m, in \u001b[0;36mRejectOptionClassification.fit\u001b[1;34m(self, dataset_true, dataset_pred)\u001b[0m\n\u001b[0;32m    160\u001b[0m     warn(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnable to satisy fairness constraints\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    161\u001b[0m     rel_inds \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mones(\u001b[38;5;28mlen\u001b[39m(fair_metric_arr), dtype\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mbool\u001b[39m)\n\u001b[1;32m--> 162\u001b[0m     best_ind \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwhere\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfair_metric_arr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrel_inds\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m    163\u001b[0m \u001b[43m                        \u001b[49m\u001b[38;5;241;43m==\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmin\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfair_metric_arr\u001b[49m\u001b[43m[\u001b[49m\u001b[43mrel_inds\u001b[49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[0;32m    165\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mROC_margin \u001b[38;5;241m=\u001b[39m ROC_margin_arr[rel_inds][best_ind]\n\u001b[0;32m    166\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mclassification_threshold \u001b[38;5;241m=\u001b[39m class_thresh_arr[rel_inds][best_ind]\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 0 is out of bounds for axis 0 with size 0"
+      "Balanced accuracy = 0.7788\n",
+      "Statistical parity difference = 0.2218\n",
+      "Disparate impact = 1.5046\n",
+      "Average odds difference = 0.1068\n",
+      "Equal opportunity difference = 0.0287\n",
+      "Theil index = 0.0675\n",
+      "K = 1, budget = 1\n",
+      "The Error for the test dataset is 0.3352\n",
+      "The Equal opportunity difference for the test dataset is 0.02867\n",
+      "Balanced accuracy = 0.8443\n",
+      "Statistical parity difference = 0.2234\n",
+      "Disparate impact = 1.6633\n",
+      "Average odds difference = 0.1033\n",
+      "Equal opportunity difference = 0.0196\n",
+      "Theil index = 0.0587\n",
+      "Balanced accuracy = 0.8443\n",
+      "Statistical parity difference = 0.2234\n",
+      "Disparate impact = 1.6633\n",
+      "Average odds difference = 0.1033\n",
+      "Equal opportunity difference = 0.0196\n",
+      "Theil index = 0.0587\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.2424\n",
+      "Disparate impact = 1.7619\n",
+      "Average odds difference = 0.1484\n",
+      "Equal opportunity difference = 0.0972\n",
+      "Theil index = 0.0620\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.2424\n",
+      "Disparate impact = 1.7619\n",
+      "Average odds difference = 0.1484\n",
+      "Equal opportunity difference = 0.0972\n",
+      "Theil index = 0.0620\n",
+      "K = 2, budget = 1\n",
+      "The Error for the test dataset is 0.2207\n",
+      "The Equal opportunity difference for the test dataset is 0.09717\n",
+      "Balanced accuracy = 0.8365\n",
+      "Statistical parity difference = 0.2153\n",
+      "Disparate impact = 1.6853\n",
+      "Average odds difference = 0.0976\n",
+      "Equal opportunity difference = 0.0167\n",
+      "Theil index = 0.0614\n",
+      "Balanced accuracy = 0.8365\n",
+      "Statistical parity difference = 0.2153\n",
+      "Disparate impact = 1.6853\n",
+      "Average odds difference = 0.0976\n",
+      "Equal opportunity difference = 0.0167\n",
+      "Theil index = 0.0614\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.1413\n",
+      "Disparate impact = 1.4394\n",
+      "Average odds difference = 0.0572\n",
+      "Equal opportunity difference = 0.0192\n",
+      "Theil index = 0.0620\n",
+      "Balanced accuracy = 0.8339\n",
+      "Statistical parity difference = 0.1413\n",
+      "Disparate impact = 1.4394\n",
+      "Average odds difference = 0.0572\n",
+      "Equal opportunity difference = 0.0192\n",
+      "Theil index = 0.0620\n",
+      "K = 3, budget = 1\n",
+      "The Error for the test dataset is 0.2217\n",
+      "The Equal opportunity difference for the test dataset is 0.01922\n",
+      "Balanced accuracy = 0.8412\n",
+      "Statistical parity difference = 0.3985\n",
+      "Disparate impact = 2.2336\n",
+      "Average odds difference = 0.2357\n",
+      "Equal opportunity difference = 0.0733\n",
+      "Theil index = 0.0598\n",
+      "Balanced accuracy = 0.8356\n",
+      "Statistical parity difference = 0.4964\n",
+      "Disparate impact = 2.4064\n",
+      "Average odds difference = 0.2917\n",
+      "Equal opportunity difference = 0.0490\n",
+      "Theil index = 0.0598\n",
+      "Balanced accuracy = 0.8451\n",
+      "Statistical parity difference = 0.4322\n",
+      "Disparate impact = 2.3340\n",
+      "Average odds difference = 0.2592\n",
+      "Equal opportunity difference = 0.0649\n",
+      "Theil index = 0.0588\n",
+      "Balanced accuracy = 0.8312\n",
+      "Statistical parity difference = 0.4785\n",
+      "Disparate impact = 2.3099\n",
+      "Average odds difference = 0.2830\n",
+      "Equal opportunity difference = 0.0459\n",
+      "Theil index = 0.0604\n",
+      "K = 4, budget = 1\n",
+      "The Error for the test dataset is 0.2621\n",
+      "The Equal opportunity difference for the test dataset is 0.04595\n",
+      "Balanced accuracy = 0.8374\n",
+      "Statistical parity difference = 0.2339\n",
+      "Disparate impact = 1.7107\n",
+      "Average odds difference = 0.1053\n",
+      "Equal opportunity difference = 0.0001\n",
+      "Theil index = 0.0608\n",
+      "Balanced accuracy = 0.8374\n",
+      "Statistical parity difference = 0.2339\n",
+      "Disparate impact = 1.7107\n",
+      "Average odds difference = 0.1053\n",
+      "Equal opportunity difference = 0.0001\n",
+      "Theil index = 0.0608\n",
+      "Balanced accuracy = 0.8356\n",
+      "Statistical parity difference = 0.2157\n",
+      "Disparate impact = 1.6583\n",
+      "Average odds difference = 0.1109\n",
+      "Equal opportunity difference = 0.0554\n",
+      "Theil index = 0.0610\n",
+      "Balanced accuracy = 0.8356\n",
+      "Statistical parity difference = 0.2157\n",
+      "Disparate impact = 1.6583\n",
+      "Average odds difference = 0.1109\n",
+      "Equal opportunity difference = 0.0554\n",
+      "Theil index = 0.0610\n",
+      "K = 5, budget = 1\n",
+      "The Error for the test dataset is 0.2299\n",
+      "The Equal opportunity difference for the test dataset is 0.05539\n"
      ]
     }
    ],
    "source": [
     "experiments_info = {}\n",
-    "budget = 0.01\n",
+    "budget = 1 #0.1/1\n",
     "for K in range(1, 6):\n",
     "    dataset_orig_train= BankDataset(path=\"./Huangrui/bank/bank_train{}.csv\".format(K))\n",
     "    dataset_orig_test= BankDataset(path=\"./Huangrui/bank/bank_test{}.csv\".format(K))\n",
-    "    #only use the budget% of the training data\n",
+    "    # only use the budget% of the training data\n",
     "    # Get the dataset and split into train and test\n",
     "    if budget == 0.01:\n",
     "        dataset_orig_train, _ = dataset_orig_train.split([0.01], shuffle=True,seed = 12345679)\n",
@@ -304,7 +446,6 @@
     "    metric_test_aft = compute_metrics(dataset_orig_test, dataset_transf_test_pred, \n",
     "                    unprivileged_groups, privileged_groups)\n",
     "\n",
-    "    #自己计算error, 不是balanced accuracy！！！\n",
     "    print(\"K = {}, budget = {}\".format(K, budget))\n",
     "    print(\"The Error for the test dataset is {:.4}\".format(np.mean(dataset_orig_test.labels!=dataset_transf_test_pred.labels)))\n",
     "    print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))\n",
@@ -472,13 +613,6 @@
     "print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))\n",
     "experiments_info[\"K = {}, budget = {}\".format(K, budget)] = {\"Error\": np.mean(dataset_orig_test.labels!=dataset_transf_test_pred.labels), \"Equal opportunity difference\": metric_test_aft[\"Equal opportunity difference\"]}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
