--- a/AIF360-Huangrui Modified/examples/ROC_ Recidivism.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_ Recidivism.ipynb
@@ -434,7 +434,7 @@
     "    #only use the budget% of the training data\n",
     "    # Get the dataset and split into train and test\n",
     "    if budget == 0.01:\n",
-    "        #for budget = 0.01 use seed \n",
+    "        #for budget = 0.01 use seed, we need to shuffle the data\n",
     "        dataset_orig_train,_ = dataset_orig_train.split([budget ], shuffle=True,seed = 43)\n",
     "    else:\n",
     "        dataset_orig_train,_ = dataset_orig_train.split([budget], shuffle=False)\n",
@@ -454,6 +454,7 @@
     "    dataset_orig_test_pred = dataset_orig_test.copy(deepcopy=True)\n",
     "    X_test = dataset_orig_test_pred.features\n",
     "    y_test = dataset_orig_test_pred.labels\n",
+    "    #beacuse we flip the y, we also need to flip the score\n",
     "    dataset_orig_test_pred.scores = 1- sigmoid(lmod.predict(X_test)).reshape(-1,1)\n",
     "\n",
     "    #### Best threshold for classification only (no fairness)\n",
@@ -529,7 +530,6 @@
     "    metric_test_aft = compute_metrics(dataset_orig_test, dataset_transf_test_pred, \n",
     "                    unprivileged_groups, privileged_groups)\n",
     "\n",
-    "    #自己计算error, 不是balanced accuracy！！！\n",
     "    print(\"K = {}, budget = {}\".format(K, budget))\n",
     "    print(\"The Error for the test dataset is {:.4}\".format(np.mean(dataset_orig_test.labels!=dataset_transf_test_pred.labels)))\n",
     "    print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))\n",
