--- a/AIF360-Huangrui Modified/examples/ROC_Adult_sex.ipynb
+++ b/AIF360-Huangrui Modified/examples/ROC_Adult_sex.ipynb
@@ -177,12 +177,14 @@
     "                 features_to_keep=[], features_to_drop=[],\n",
     "                 na_values=['?'], custom_preprocessing=None,\n",
     "                 metadata=default_mappings, path=None):\n",
-    "         #deal with the sex\n",
+    "        #deal with the sex\n",
     "        df = pd.read_csv(path,index_col=False,header = 0, sep = ',')\n",
+    "        # Here we drop the sex_Male column just to make sure the data is the same so that there is no \n",
+    "        # error for our pretrained initial biased model\n",
+    "        # Considering our privileged group is \"Male\", here, privileged_class is 0\n",
     "        df.drop(['sex_Male'],axis = 1,inplace = True)\n",
     "        numericals = [col for col in df.columns if len(df[col].unique())>2 and max(df[col])>1]\n",
     "        code_continuous(df,numericals, 5)\n",
-    "        #deal with the race\n",
     "        super(AdultDataset, self).__init__(df=df, label_name=label_name,\n",
     "            favorable_classes=favorable_classes,\n",
     "            protected_attribute_names=protected_attribute_names,\n",
@@ -201,8 +203,9 @@
    "outputs": [],
    "source": [
     "## import dataset\n",
-    "dataset_used = \"adult\" # \"adult\", \"german\", \"compas\"\n",
+    "dataset_used = \"adult\" \n",
     "\n",
+    "# Considering our privileged group is \"Male\", here, privileged_class is 0\n",
     "privileged_groups = [{'sex_Female': 0}]\n",
     "unprivileged_groups = [{'sex_Female': 1}]\n",
     "\n",
@@ -549,7 +552,6 @@
     "    metric_test_aft = compute_metrics(dataset_orig_test, dataset_transf_test_pred, \n",
     "                    unprivileged_groups, privileged_groups)\n",
     "\n",
-    "    #自己计算error, 不是balanced accuracy！！！\n",
     "    print(\"K = {}, budget = {}\".format(K, budget))\n",
     "    print(\"The Error for the test dataset is {:.4}\".format(np.mean(dataset_orig_test.labels!=dataset_transf_test_pred.labels)))\n",
     "    print(\"The Equal opportunity difference for the test dataset is {:.4}\".format(metric_test_aft[\"Equal opportunity difference\"]))\n",
