--- a/results/experiment analysis.ipynb
+++ b/results/experiment analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +88,174 @@
     "#save adult_sex_info to a json file\n",
     "with open(\"adult_sex_info.json\", \"w\") as outfile: \n",
     "    json.dump(adult_sex_info, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.206634036, 0.01659732468375988]\n",
+      "[0.17530024100000002, 0.005824727323387215]\n",
+      "[0.167499863, 0.003995318051938088]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=0.1\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=0.1\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=0.1\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2106005192, 0.019593675314095983]\n",
+      "[0.20839915800000003, 0.008960204305791758]\n",
+      "[0.2135013524, 0.019082914191188946]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=1\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=1\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=1\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.09580308, 0.049440236339625285]\n",
+      "[0.11679468579999999, 0.019963604654354438]\n",
+      "[0.16213320979999998, 0.1253856884083653]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=1\"][\"EOD\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=1\"][\"EOD\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=1\"][\"EOD\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.20603429680000002, 0.018488186722942716]\n",
+      "[0.177933474, 0.004909570724889409]\n",
+      "[0.173166813, 0.004317421250331219]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=0.2\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=0.2\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=0.2\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2081673248, 0.01845622769843435]\n",
+      "[0.1827330798, 0.007713222961897306]\n",
+      "[0.1770333964, 0.00792556754753323]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=0.3\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=0.3\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=0.3\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.2093672916, 0.01766604067062043]\n",
+      "[0.19409950780000002, 0.0077832624152808895]\n",
+      "[0.1871669742, 0.013068538723658861]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=0.5\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=0.5\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=0.5\"][\"Error\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.079728957, 0.05615187091507465]\n",
+      "[0.066245407, 0.04541820796471966]\n",
+      "[0.0094519922, 0.009152480664689272]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=1.5\"][\"EOD\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=1.5\"][\"EOD\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=1.5\"][\"EOD\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.22013331379999998, 0.021238176532469694]\n",
+      "[0.2236993138, 0.012754754059457597]\n",
+      "[0.2383999084, 0.003492052723607562]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(adult_sex_info[\"budget=0.01\"][\"fc=1.5\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=0.1\"][\"fc=1.5\"][\"Error\"])\n",
+    "print(adult_sex_info[\"budget=1\"][\"fc=1.5\"][\"Error\"])"
    ]
   },
   {
