--- a/predict-responsibly/prepare data.ipynb
+++ b/predict-responsibly/prepare data.ipynb
@@ -99,7 +99,7 @@
    ],
    "source": [
     "for K in range(1,6):\n",
-    "    db = pickle.load(open('experiment/adult{}_sex.pkl'.format(K),'rb')) \n",
+    "    db = pickle.load(open('experiments/adult{}_sex.pkl'.format(K),'rb')) \n",
     "    Ytrain = db['Ytrain'] \n",
     "    Yval = db['Yval']\n",
     "    Ytest = db['Ytest'] \n",
@@ -129,9 +129,9 @@
     "    xtrain = Xtrain.to_numpy()\n",
     "    xval = Xval.to_numpy()\n",
     "    xtest = Xtest.to_numpy()\n",
-    "    new_data[\"x_train\"] = np.concatenate([xtrain,xtest])\n",
+    "    new_data[\"x_train\"] = np.concatenate([xtrain,xval])\n",
     "    new_data[\"x_test\"] = xtest\n",
-    "    new_data[\"attr_train\"] = np.concatenate([attr_train,attr_test])\n",
+    "    new_data[\"attr_train\"] = attr_train\n",
     "    new_data[\"attr_test\"] = attr_test\n",
     "    #save new data as npz file\n",
     "    np.savez(\"data/adult/adult{}_sex.npz\".format(K),**new_data)"
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -242,9 +242,9 @@
     "    xtrain = Xtrain.to_numpy()\n",
     "    xval = Xval.to_numpy()\n",
     "    xtest = Xtest.to_numpy()\n",
-    "    new_data[\"x_train\"] = np.concatenate([xtrain,xtest])\n",
+    "    new_data[\"x_train\"] = np.concatenate([xtrain,xval])\n",
     "    new_data[\"x_test\"] = xtest\n",
-    "    new_data[\"attr_train\"] = np.concatenate([attr_train,attr_test])\n",
+    "    new_data[\"attr_train\"] = attr_train\n",
     "    new_data[\"attr_test\"] = attr_test\n",
     "    #save new data as npz file\n",
     "    np.savez(\"data/compas/recidivism{}_sex.npz\".format(K),**new_data)"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -331,9 +331,9 @@
     "    xtrain = Xtrain.to_numpy()\n",
     "    xval = Xval.to_numpy()\n",
     "    xtest = Xtest.to_numpy()\n",
-    "    new_data[\"x_train\"] = np.concatenate([xtrain,xtest])\n",
+    "    new_data[\"x_train\"] = np.concatenate([xtrain,xval])\n",
     "    new_data[\"x_test\"] = xtest\n",
-    "    new_data[\"attr_train\"] = np.concatenate([attr_train,attr_test])\n",
+    "    new_data[\"attr_train\"] = attr_train\n",
     "    new_data[\"attr_test\"] = attr_test\n",
     "    #save new data as npz file\n",
     "    np.savez(\"data/zindi/zindi{}_sex.npz\".format(K),**new_data)"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,9 +440,9 @@
     "    xtrain = Xtrain.to_numpy()\n",
     "    xval = Xval.to_numpy()\n",
     "    xtest = Xtest.to_numpy()\n",
-    "    new_data[\"x_train\"] = np.concatenate([xtrain,xtest])\n",
+    "    new_data[\"x_train\"] = np.concatenate([xtrain,xval])\n",
     "    new_data[\"x_test\"] = xtest\n",
-    "    new_data[\"attr_train\"] = np.concatenate([attr_train,attr_test])\n",
+    "    new_data[\"attr_train\"] = attr_train\n",
     "    new_data[\"attr_test\"] = attr_test\n",
     "    #save new data as npz file\n",
     "    np.savez(\"data/bank/bank{}_age.npz\".format(K),**new_data)"
@@ -466,6 +466,26 @@
    ],
    "source": [
     "Xtrain.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19512,)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ydm_train.shape"
    ]
   }
  ],
