[Update] MultiAcc result1
update the mutliAcc result in adult_sex. Together with some other experiment.  Other notebooks might have some errors.

--- a/multiacc/Multiacc_Huangrui_DectionTreeRegressor.ipynb
+++ b/multiacc/Multiacc_Huangrui_DectionTreeRegressor.ipynb
@@ -387,6 +387,7 @@
     "        predicted_test_logits = test_logits\n",
     "    # delta = res(probs,y_val)\n",
     "    residual = probs - y_val\n",
+    "    print(max(residual), min(residual))\n",
     "    for i in range(3):\n",
     "        # define the control\n",
     "        control_idx1 = db[\"ydm_train\"][idxs1]>0.5\n",
